--- a/templates/home.html
+++ b/templates/home.html
@@ -1,69 +1,78 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="static/home.css" />
+    </head>
     <body>
+        <div class="header">
+            <h1>Student Exam Performance Prediction</h1>
+        </div>
+        
         <div class="login">
-            <h1>Student Exam Performance Indicator</h1>
-
             <form action="{{ url_for('predict_datapoint')}}" method="post">
-                <h1>
-                    <legend>Student Exam Performance Prediction</legend>
-                </h1>
-                <div class="mb-3">
-                    <label class="form-label">Gender</label>
-                    <select class="form-control" name="gender" placeholder="Enter your Gender" required>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Race/Ethnicity</label>
-                    <select class="form-control" name="race_ethnicity" placeholder="Enter your Race/Ethnicity" required>
-                        <option value="group A">Group A</option>
-                        <option value="group B">Group B</option>
-                        <option value="group C">Group C</option>
-                        <option value="group D">Group D</option>
-                        <option value="group E">Group E</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Parental Level of Education</label>
-                    <select class="form-control" name="parental_level_of_education" placeholder="Enter your Parental Level of Education" required>
-                        <option value="bachelor's degree">Bachelor's Degree</option>
-                        <option value="some college">Some College</option>
-                        <option value="master's degree">Master's Degree</option>
-                        <option value="associate's degree">Associate's Degree</option>
-                        <option value="high school">High School</option>
-                        <option value="some high school">Some High School</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Lunch Type</label>
-                    <select class="form-control" name="lunch" placeholder="Enter your Lunch" required>
-                        <option value="standard">Standard</option>
-                        <option value="free/reduced">Free/Reduced</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Test Preparation Course</label>
-                    <select class="form-control" name="test_preparation_course" placeholder="Enter your Test Preparation Course" required>
-                        <option value="none">None</option>
-                        <option value="completed">Completed</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Reading Score out of 100</label>
-                    <input type="number" name="reading_score" class="form-control" placeholder="Enter your Reading Score" min=0 max=100 required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Writing Score out of 100</label>
-                    <input type="number" name="writing_score" class="form-control" placeholder="Enter your Writing Score" min=0 max=100 required>
+                <div class="inputs">
+                    <div class="mb-3">
+                        <label class="form-label">Gender</label>
+                        <select class="form-control" name="gender" placeholder="Enter your Gender" required>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Race/Ethnicity</label>
+                        <select class="form-control" name="race_ethnicity" placeholder="Enter your Race/Ethnicity" required>
+                            <option value="group A">Group A</option>
+                            <option value="group B">Group B</option>
+                            <option value="group C">Group C</option>
+                            <option value="group D">Group D</option>
+                            <option value="group E">Group E</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Parental Level of Education</label>
+                        <select class="form-control" name="parental_level_of_education" placeholder="Enter your Parental Level of Education" required>
+                            <option value="bachelor's degree">Bachelor's Degree</option>
+                            <option value="some college">Some College</option>
+                            <option value="master's degree">Master's Degree</option>
+                            <option value="associate's degree">Associate's Degree</option>
+                            <option value="high school">High School</option>
+                            <option value="some high school">Some High School</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Lunch Type</label>
+                        <select class="form-control" name="lunch" placeholder="Enter your Lunch" required>
+                            <option value="standard">Standard</option>
+                            <option value="free/reduced">Free/Reduced</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Test Preparation Course</label>
+                        <select class="form-control" name="test_preparation_course" placeholder="Enter your Test Preparation Course" required>
+                            <option value="none">None</option>
+                            <option value="completed">Completed</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Reading Score out of 100</label>
+                        <input type="number" name="reading_score" class="form-control" placeholder="Enter your Reading Score" min=0 max=100 required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Writing Score out of 100</label>
+                        <input type="number" name="writing_score" class="form-control" placeholder="Enter your Writing Score" min=0 max=100 required>
+                    </div>
                 </div>
                 <div class="mb-3">
                     <input type="submit" class="btn btn-primary" value="Predict your Maths Score" required>
                 </div>
             </form>
-            <h2>
-                The prediction is {{results}}
-            </h2>
+            <div class="result">
+                <h2>
+                    Your math score is: 
+                </h2>
+                <p>
+                    <strong>{{results}}</strong>
+                </p>
+            </div>
         </div>
     </body>
 </html>
