--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,8 @@
-<h1>Welcome to the Home Page</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="static/style.css" />
+    </head>
+    <body>
+        <h1>Welcome to the Home Page</h1>
+    </body>
+</html>
