--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="static/home.css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
     </head>
     <body>
         <div class="header">
